[package]
name = "festrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = "0.1.37"
ulid = "1.0.0"
